crates/ink/tests/ui/selector_id/fail/invalid_parameter_type_02.rs
use ink_lang as ink;

const _: u32 = ink::selector_id!(42);

fn main() {}
